# chrony_monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
autostart/: chrony-monitor.desktop
chrony_monitor/: __init__.py  __main__.py  display.py  monitor.py  recovery.py  status.py  tempcomp.py
scripts/: apply-tempcomp.sh  configure-gps.sh  dump-gps-config.py  fix-dependencies.sh  init-serial-pps.sh  install.sh  log_freq_temp.sh
systemd/: chrony-monitor.service  serial-pps.service
